--- a/App/Views/admin/event-detail.html
+++ b/App/Views/admin/event-detail.html
@@ -34,10 +34,10 @@
                         <label for="link">Odkaz</label>
                         <input type="text" name="link" id="link" placeholder="Odkaz" value="{{ event.event_link }}" />
                     </div>
-                    <div class="event-form__data-cell">
+                    <!-- <div class="event-form__data-cell">
                         <label for="image">Obrázek</label>
                         <input type="file" name="image" id="image">
-                    </div>
+                    </div> -->
                 </div>
                 <div class="event-form__actions">
                     <input class="event-form__btn event-form__btn--submit" id="submit" name="submit" type="submit" value="Odeslat">
