--- a/App/Views/includes/postScriptum.html
+++ b/App/Views/includes/postScriptum.html
@@ -1,4 +1,4 @@
-<section class="postScriptum">
+<section class="postScriptum closed" id="post-scriptum">
     <img src="img/amnion.jpg" alt="AmnionTeam" class="postScriptum__photo">
-    <h2 class="heading-2">S tvorbou webu jsme Táni rádi pomohli, AmnioN Web</h2>
+    <h2 class="heading-2">S tvorbou webu jsme Táni rádi pomohli, AmnioN&nbsp;Web</h2>
 </section>
