--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -1,7 +1,8 @@
-<header class="header">
+<header class="header" id="header">
   <div class="header__text">
     <h2 class="heading-2">Taťjana Horká</h2>
     <h1 class="heading-1">Vzájemně v pohybu</h1>
   </div>
-  <img class="header__bg" src="img/hero.jpg" alt="">
+  <img class="header__bg" src="img/hero.jpg" alt="Táňa a strom">
+  <div class="header__overlay"></div>
 </header>
