--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,6 +162,22 @@
   animation-delay: 1.5s;
   transition-delay: 1.5s; }
 
+@keyframes showHideModal {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(-3rem);
+    animation-timing-function: ease-out; }
+  10% {
+    opacity: 1;
+    transform: translateX(-50%);
+    animation-timing-function: linear; }
+  90% {
+    opacity: 1;
+    transform: translateX(-50%); }
+  100% {
+    opacity: 0;
+    animation-timing-function: linear; } }
+
 *,
 *::before,
 *::after {
@@ -221,7 +237,8 @@ a:link {
       font-size: 2.5rem; } }
   @media screen and (max-width: 400px) {
     .heading-3 {
-      line-height: 3rem; } }
+      line-height: 3rem;
+      text-align: center; } }
 
 .heading-4 {
   font-size: 2rem;
@@ -345,6 +362,38 @@ a:link {
     @media screen and (max-width: 800px) {
       .cooperation-way__drawing {
         margin-top: 2rem; } }
+
+.modal {
+  width: 50rem;
+  height: 10rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  transform: translateX(-50%);
+  border-radius: .5rem;
+  box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.2);
+  font-size: 2.5rem;
+  letter-spacing: 1px;
+  position: fixed;
+  top: 5rem;
+  left: 50%;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: showHideModal 5s linear forwards; }
+  @media only screen and (max-width: 600px) {
+    .modal {
+      width: 35rem;
+      height: 8rem;
+      font-size: 2rem; } }
+  @media only screen and (max-width: 400px) {
+    .modal {
+      width: 30rem;
+      height: 6rem;
+      font-size: 1.8rem; } }
+  .modal.success {
+    color: #9CBD6F; }
+  .modal.fail {
+    color: brown; }
 
 .review {
   width: 70rem;
@@ -495,8 +544,10 @@ a:link {
   position: relative; }
   @media screen and (max-width: 1500px) {
     .cooperation {
-      padding-left: 5rem;
-      padding-right: 5rem; } }
+      padding: 25rem 5rem; } }
+  @media screen and (max-width: 1300px) {
+    .cooperation {
+      padding: 15rem 5rem; } }
   @media screen and (max-width: 800px) {
     .cooperation {
       padding-bottom: 0;
@@ -609,7 +660,7 @@ a:link {
         flex-wrap: wrap; } }
   .events__event {
     border-radius: 1rem;
-    background-color: #DBF2BA;
+    background-color: #f4ffe4;
     padding: 3rem;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
     width: 100%;
@@ -642,17 +693,16 @@ a:link {
           margin-right: 0;
           margin-bottom: 1.5rem; } }
     .events__event .heading-4 {
-      margin-bottom: 2rem; }
-      @media only screen and (max-width: 1000px) {
-        .events__event .heading-4 {
-          margin-bottom: 1rem; } }
+      margin-bottom: .5rem; }
     .events__event__description {
-      margin-bottom: 2rem; }
+      margin-bottom: 2rem;
+      font-size: 1.6rem;
+      font-weight: 300; }
       @media only screen and (max-width: 1000px) {
         .events__event__description {
           margin-bottom: 1rem; } }
     .events__event__link {
-      color: #9CBD6F !important;
+      color: #739545 !important;
       position: absolute;
       right: 5rem;
       bottom: 5rem;
@@ -807,6 +857,28 @@ a:link {
     @media screen and (max-width: 500px) {
       .header__bg {
         transform: scale(1.2) translateY(-5rem); } }
+  .header__overlay {
+    width: 100%;
+    height: calc(100% + 2px);
+    background-image: linear-gradient(to bottom, transparent 95%, white 99%);
+    position: absolute;
+    top: 0;
+    left: 0; }
+    @media screen and (max-width: 1750px) {
+      .header__overlay {
+        transform: scale(1.05) translateY(-5rem); } }
+    @media screen and (max-width: 1500px) {
+      .header__overlay {
+        transform: scale(1.1) translateY(-10rem); } }
+    @media screen and (max-width: 1300px) {
+      .header__overlay {
+        transform: scale(1.3) translateY(-10rem); } }
+    @media screen and (max-width: 1000px) {
+      .header__overlay {
+        transform: scale(1.3) translateY(-5rem); } }
+    @media screen and (max-width: 500px) {
+      .header__overlay {
+        transform: scale(1.2) translateY(-5rem); } }
   .header__text {
     position: absolute;
     z-index: 1;
@@ -828,12 +900,18 @@ a:link {
       .header__text {
         padding-top: 3rem;
         padding-bottom: 3rem; } }
+    .header__text > * {
+      text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.2); }
+      @media screen and (max-width: 1000px) {
+        .header__text > * {
+          text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); } }
   .header .heading-2 {
     text-align: left; }
     @media screen and (max-width: 1000px) {
       .header .heading-2 {
         text-align: center; } }
   .header .heading-1 {
+    margin-bottom: .5rem;
     text-align: center; }
 
 .organizations {
@@ -1025,7 +1103,7 @@ a:link {
     .passedEvents {
       height: auto; } }
   .passedEvents__image-container {
-    width: 100%;
+    width: 110%;
     height: 100%;
     background-color: transparent;
     display: block;
@@ -1175,20 +1253,32 @@ a:link {
 
 .postScriptum {
   width: 100vw;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   position: relative; }
+  .postScriptum.closed {
+    height: 30rem;
+    cursor: pointer; }
+    .postScriptum.closed .heading-2 {
+      top: 50% !important; }
+    .postScriptum.closed:hover .postScriptum__photo {
+      transform: scale(1.05); }
   .postScriptum__photo {
     width: 100%;
-    height: auto;
-    object-fit: cover; }
+    height: 100%;
+    object-position: 50% 35%;
+    object-fit: cover;
+    transition: all .2s ease-out; }
   .postScriptum .heading-2 {
     width: 70%;
-    background-color: rgba(0, 0, 0, 0.45);
     padding: 4rem;
+    background-color: rgba(0, 0, 0, 0.45);
+    transform: translate(-50%, -50%);
     position: absolute;
     top: 80%;
-    right: 15%; }
+    left: 50%;
+    transition: all 1s ease-out; }
     @media only screen and (max-width: 1250px) {
       .postScriptum .heading-2 {
         font-size: 3.3rem; } }
@@ -1202,28 +1292,12 @@ a:link {
     @media only screen and (max-width: 800px) {
       .postScriptum .heading-2 {
         width: 100%;
-        padding: 8rem 4rem 4rem 4rem;
-        top: 65%;
-        right: 0;
-        bottom: 0; } }
-    @media only screen and (max-width: 600px) {
-      .postScriptum .heading-2 {
-        padding: 6rem 4rem 4rem 4rem; } }
-    @media only screen and (max-width: 600px) {
-      .postScriptum .heading-2 {
-        padding: 4rem 4rem 4rem 4rem; } }
-    @media only screen and (max-width: 450px) {
-      .postScriptum .heading-2 {
-        padding: 3rem 4rem 4rem 4rem; } }
+        padding: 4rem;
+        top: 80%;
+        right: 0; } }
     @media only screen and (max-width: 400px) {
       .postScriptum .heading-2 {
-        padding: 2rem 4rem 4rem 4rem; } }
-    @media only screen and (max-width: 360px) {
-      .postScriptum .heading-2 {
-        padding: 1rem 3rem 0rem 3rem; } }
-    @media only screen and (max-width: 330px) {
-      .postScriptum .heading-2 {
-        padding: 0.5rem 2rem 0rem 2rem; } }
+        padding: 2rem; } }
 
 .profile {
   background-image: linear-gradient(180deg, rgba(159, 191, 115, 0.1) 0%, rgba(129, 168, 76, 0.1) 100%);
@@ -1630,17 +1704,18 @@ a:link {
       .book__image {
         transform: scale(1) translateX(-8rem) translateY(0rem); } }
   .book__cta {
-    background-color: #ffffff;
-    padding: 1rem 0;
-    border: none;
     width: 25rem;
-    outline: none;
+    padding: 1rem 0;
+    background-color: #ffffff;
+    border: none;
     border-radius: 5rem;
+    outline: none;
     cursor: pointer;
+    overflow: hidden;
     font-size: 1.8rem;
+    font-family: "Kalam", cursive;
     display: block;
     position: absolute;
-    overflow: hidden;
     left: 75%;
     bottom: 0;
     transform: translateY(50%) translateX(-50%);
@@ -1650,11 +1725,13 @@ a:link {
         font-size: 1.6rem; } }
     @media screen and (max-width: 1000px) {
       .book__cta {
-        border: 2px solid #9CBD6F; } }
+        box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.2); } }
+    @media screen and (max-width: 900px) {
+      .book__cta {
+        left: 50%; } }
     @media screen and (max-width: 700px) {
       .book__cta {
         height: 5rem;
-        left: 50%;
         transform: translateX(-50%) translateY(-50%);
         top: 0; } }
     @media screen and (max-width: 500px) {
@@ -1679,16 +1756,15 @@ a:link {
       .book__cta:hover::before {
         transform: translateY(0); }
   .book__text {
+    width: 100rem;
     padding: 5rem;
     background: rgba(255, 255, 255, 0.79);
     border-radius: 0.5rem;
-    width: 100rem; }
+    font-size: 1.8rem;
+    font-weight: 300; }
     @media screen and (max-width: 1400px) {
       .book__text {
-        padding-top: 5rem;
-        padding-bottom: 5rem;
-        padding-left: 3rem;
-        padding-right: 3rem; } }
+        padding-top: 5rem 3rem; } }
     @media screen and (max-width: 1200px) {
       .book__text {
         width: 70rem; } }
@@ -1700,6 +1776,8 @@ a:link {
         width: 50rem; } }
     @media screen and (max-width: 700px) {
       .book__text {
-        padding: 0;
-        padding-top: 5rem;
+        padding: 5rem 3.5rem 0 3.5rem;
         width: 100%; } }
+    @media screen and (max-width: 500px) {
+      .book__text {
+        padding: 5rem 2rem 0 2rem; } }
