--- a/src/client/scss/abstracts/_animations.scss
+++ b/src/client/scss/abstracts/_animations.scss
@@ -243,3 +243,24 @@
     }
   }
 }
+
+@keyframes showHideModal {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(-3rem);
+    animation-timing-function: ease-out;
+  }
+  10% {
+    opacity: 1;
+    transform: translateX(-50%);
+    animation-timing-function: linear;
+  }
+  90% {
+    opacity: 1;
+    transform: translateX(-50%);
+  }
+  100% {
+    opacity: 0;
+    animation-timing-function: linear;
+  }
+}
