--- a/src/client/scss/base/_typography.scss
+++ b/src/client/scss/base/_typography.scss
@@ -40,6 +40,7 @@
     }
     @media screen and (max-width: 400px) {
         line-height: 3rem;
+        text-align: center;
     }
 }
 .heading-4 {
