--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'base/utilities';
 
 @import 'components/cooperation-way';
+@import 'components/modal';
 @import 'components/review';
 
 @import 'sections/cooperation';
