--- a/src/client/scss/sections/_cooperation.scss
+++ b/src/client/scss/sections/_cooperation.scss
@@ -5,8 +5,10 @@
     position: relative;
 
     @media screen and (max-width: 1500px) {
-        padding-left: 5rem;
-        padding-right: 5rem;
+        padding: 25rem 5rem;
+    }
+    @media screen and (max-width: 1300px) {        
+        padding: 15rem 5rem;
     }
     @media screen and (max-width: $bp-cooperation-mobile) {
         padding-bottom: 0;
