--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -35,6 +35,32 @@
     }
   }
 
+  &__overlay {
+    width: 100%;
+    height: calc(100% + 2px);
+    background-image: linear-gradient(to bottom, transparent 95%, white 99%);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    @media screen and (max-width: 1750px) {  
+      transform: scale(1.05) translateY(-5rem);    
+    }
+    @media screen and (max-width: 1500px) {  
+      transform: scale(1.1) translateY(-10rem);    
+    }
+    @media screen and (max-width: 1300px) {  
+      transform: scale(1.3) translateY(-10rem);    
+    }
+    @media screen and (max-width: 1000px) {  
+      transform: scale(1.3) translateY(-5rem);
+    }
+    @media screen and (max-width: 500px) {  
+      transform: scale(1.2) translateY(-5rem);
+    }
+  }
+
   &__text {
     position: absolute;
     z-index: 1;
@@ -59,6 +85,14 @@
       padding-top: 3rem;
       padding-bottom: 3rem;
     }
+
+    & > * {
+      text-shadow: 1px 2px 1px $color-black-overlay-light;
+
+      @media screen and (max-width: $bp-header-mobile) {
+        text-shadow: 1px 1px 1px $color-black-overlay;
+      }
+    }
   }
   & .heading-2 {
     text-align: left;
@@ -68,6 +102,8 @@
     }
   }
   & .heading-1 {
+    margin-bottom: .5rem;
+
     text-align: center;
   } 
 }
