--- a/src/client/scss/sections/_book.scss
+++ b/src/client/scss/sections/_book.scss
@@ -20,7 +20,7 @@
 
   &__image-container {
     width: 100%;
-    height: 100%;
+    height: 85rem;
 
     display: block;
 
@@ -29,7 +29,6 @@
 
     @media screen and (max-width: 1000px) {
       height: 75rem;
-      width: auto;
     }
     @media screen and (max-width: 700px) {
         height: 40rem;
@@ -46,14 +45,8 @@
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
 
-    @media screen and (max-width: 1200px) {
-      top: 70%;
-    }
     @media screen and (max-width: 1050px) {
       font-size: 1.6rem;
-    }
-    @media screen and (max-width: 1000px) {
-        top: 75%;
     }
     @media screen and (max-width: 700px) {
         position: relative;
@@ -63,42 +56,20 @@
     }
   }
   &__image {
-    width: 100%;
-    height: auto;
+    height: 100%;
 
-    @media screen and (max-width: 1300px) {
-      transform: scale(1.2);
-    }
-    @media screen and (max-width: 1200px) {
-      transform: scale(1.2) translateY(-5rem);
-    }
-    @media screen and (max-width: 1000px) {
-      height: 100%;
-      width: auto;
+    transform: translateX(calc(50vw - 680px)) scale(1.3);
 
-      transform: scale(1.2) translateX(-8rem) translateY(-5rem);
+    @media screen and (max-width: 1000px) { 
+      transform: translateX(calc(50vw - 590px)) scale(1.2) translateY(-5rem);
     }
-    @media screen and (max-width: 900px) {
-        transform: translateX(-12rem);        
+    @media screen and (max-width: 700px) { 
+      transform: translateY(-2.5rem) translateX(calc(50vw - 330px));
     }
-    @media screen and (max-width: 800px) {
-        transform: translateX(-16rem);        
+    @media screen and (max-width: 500px) { 
+      transform: translateY(-2.5rem) translateX(calc(50vw - 240px));
     }
-    @media screen and (max-width: 700px) {
-        transform: scale(1.2) translateX(1rem) translateY(-2rem);                        
-    }
-    @media screen and (max-width: 600px) {
-        transform: scale(1.2) translateX(-3rem) translateY(-2rem);                        
-    }
-    @media screen and (max-width: 500px) {
-        transform: scale(1.2) translateX(-1rem) translateY(-2rem);                        
-    }
-    @media screen and (max-width: 400px) {
-        transform: scale(1.2) translateX(-5rem) translateY(-2rem);                        
-    }
-    @media screen and (max-width: 350px) {
-        transform: scale(1) translateX(-8rem) translateY(0rem);                        
-    }
+
   }
   &__cta {
     width: 25rem;
@@ -183,7 +154,8 @@
       background: rgba($color-white, 1);
     }
     @media screen and (max-width: 900px) {
-      width: 50rem;
+      width: 60rem;
+      padding: 3rem;
     }
     @media screen and (max-width: 700px) {
       padding: 5rem 3.5rem 0 3.5rem;
