--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1669,10 +1669,10 @@ a:link {
         transform: translateX(calc(50vw - 590px)) scale(1.2) translateY(-5rem); } }
     @media screen and (max-width: 700px) {
       .book__image {
-        transform: translateY(-2.5rem) translateX(calc(50vw - 330px)); } }
+        transform: translateY(-2.5rem) scale(1.2) translateX(calc(50vw - 330px)); } }
     @media screen and (max-width: 500px) {
       .book__image {
-        transform: translateY(-2.5rem) translateX(calc(50vw - 240px)); } }
+        transform: translateY(-2.5rem) scale(1.2) translateX(calc(50vw - 230px)); } }
   .book__cta {
     width: 25rem;
     padding: 1rem 0;
