--- a/App/Views/includes/book.html
+++ b/App/Views/includes/book.html
@@ -1,9 +1,21 @@
 <section class="book">
     <container class="book__image-container">
-        <img class="book__image" src="img/rainbowStories.jpg">
+        <img
+            alt="Duhové příběhy"
+            class="book__image"
+            src="img/rainbowStories_1920.jpg"
+            srcset="
+                img/rainbowStories_600.jpg 600w,
+                img/rainbowStories_1000.jpg 1000w,
+                img/rainbowStories_1400.jpg 1400w,
+                img/rainbowStories_1920.jpg 1920w,
+                img/rainbowStories_big.jpg 4924w
+            "
+            sizes="110vw"
+        >
     </container>
     <div class="book__content">
-        <p class="book__text">Text který napíše Táňa a bude mocinky cute a good a bude propagovat duhové příběhy a skleněnku. Text který napíše Táňa a bude mocinky cute a good a bude propagovat duhové příběhy a skleněnku. Text který napíše Táňa a bude mocinky cute a good a bude propagovat duhové příběhy a skleněnku. </p>
-        <button class="book__cta">Stáhnout knihu</button>
+        <p class="book__text">"Duhové příběhy" jsou inspirované lidmi - pěstouny. Pěstouni dávají rodinné zázemí dětem, které se ocitly bez rodičů. Zakoupením knihy podpoříte neziskovou organizaci Skleněnka, z.s., Veselí nad Moravou. Skleněnka, z.s. je doprovodnou organizací pro tyto pěstounské rodiny.</p>
+        <a rel="noopener" target="_blank" href="https://forms.gle/wfsKYEzQ4eT3KLkD9"><button class="book__cta">Objednat knihu</button></a>
     </div>
 </section>
