--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -3,6 +3,16 @@
     <h2 class="heading-2">Taťjana Horká</h2>
     <h1 class="heading-1">Vzájemně v pohybu</h1>
   </div>
-  <img class="header__bg" src="img/hero.jpg" alt="Táňa a strom">
+  <img
+    class="header__bg"
+    src="img/hero_1920.jpg"
+    alt="Táňa a strom"
+    srcset="
+      img/hero_1920.jpg 1920w,
+      img/hero_2300.jpg 2300w,
+      img/hero_big.jpg 5472w
+    "
+    sizes="110vw"
+  >
   <div class="header__overlay"></div>
 </header>
