--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -16,7 +16,7 @@
     <h3 class="heading-3">Spolupracuji s neziskovými organizacemi</h3>
     <container class="organizations__container">
         <div class="organizations__organization toBeAnimated animation-bounceUp">
-            <a class="organizations__waterlily" href="https://www.branabrnenska.cz/">
+            <a target="_blank" rel="noopener" class="organizations__waterlily" href="https://www.branabrnenska.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
                 </svg>
@@ -27,10 +27,10 @@
                     <use xlink:href="#bloom"></use>
                 </svg>
             </a>
-            <h4 class="heading-4"><a href="https://www.branabrnenska.cz/">MAS BRÁNA BRNĚNSKA</a></h4>
+            <h4 class="heading-4"><a target="_blank" rel="noopener" href="https://www.branabrnenska.cz/">MAS BRÁNA BRNĚNSKA</a></h4>
         </div>
         <div class="organizations__organization delay toBeAnimated animation-bounceUp delay--05">
-            <a class="organizations__waterlily" href="http://duhovasklenenka.cz/">
+            <a target="_blank" rel="noopener" class="organizations__waterlily" href="http://duhovasklenenka.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
                 </svg>
@@ -41,10 +41,10 @@
                     <use xlink:href="#bloom"></use>
                 </svg>
             </a>
-            <h4 class="heading-4"><a href="http://duhovasklenenka.cz/">Skleněnka z.s.</a></h4>
+            <h4 class="heading-4"><a target="_blank" rel="noopener" href="http://duhovasklenenka.cz/">Skleněnka z.s.</a></h4>
         </div>
         <div class="organizations__organization delay toBeAnimated animation-bounceUp delay--10">
-            <a class="organizations__waterlily" href="http://svobodnaskola.cz/">
+            <a target="_blank" rel="noopener" class="organizations__waterlily" href="http://svobodnaskola.cz/">
                 <svg preserveAspectRatio="none" viewBox="0 0 71 73" class="organizations__svg organizations__svg--leaf">
                     <use xlink:href="#leaf"></use>
                 </svg>
@@ -55,7 +55,7 @@
                     <use xlink:href="#bloom"></use>
                 </svg>
             </a>
-            <h4 class="heading-4"><a href="http://svobodnaskola.cz/">Škola CoLibri</a></h4>   
+            <h4 class="heading-4"><a target="_blank" rel="noopener" href="http://svobodnaskola.cz/">Škola CoLibri</a></h4>   
         </div>
     </container>
 </section>
