--- a/App/Views/includes/postScriptum.html
+++ b/App/Views/includes/postScriptum.html
@@ -1,4 +1,16 @@
 <section class="postScriptum closed" id="post-scriptum">
-    <img src="img/amnion.jpg" alt="AmnionTeam" class="postScriptum__photo">
+    <img
+        src="img/amnion_1920.jpg"
+        alt="AmnioN Team"
+        class="postScriptum__photo"
+        srcset="
+            img/amnion_600.jpg 600w,
+            img/amnion_1000.jpg 1000w,
+            img/amnion_1400.jpg 1400w,
+            img/amnion_1920.jpg 1920w,
+            img/amnion_big.jpg 5472w
+        "
+        sizes="100vw"
+    >
     <h2 class="heading-2">S tvorbou webu jsme Táni rádi pomohli, AmnioN&nbsp;Web</h2>
 </section>
