--- a/App/Views/includes/reviews.html
+++ b/App/Views/includes/reviews.html
@@ -13,7 +13,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_vykoupilova.jpg" class="review__img"></img>
+                <img alt="Recenze - Jarka Vykoupilová" src="img/review_vykoupilova.jpg" class="review__img"></img>
             </div>
             <h5 class="heading-5">
                 Jarka Vykoupilová
@@ -34,7 +34,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_badal.png" class="review__img"></img>
+                <img alt="Recenze - Jan Badal" src="img/review_badal.jpg" class="review__img"></img>
             </div>
             <h5 class="heading-5">
                 Jan Badal
@@ -55,7 +55,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_stastna.png" class="review__img"></img>
+                <img alt="Recenze - Jana Šťastná" src="img/review_stastna.jpg" class="review__img"></img>
             </div>
             <h5 class="heading-5">
                 Jana Šťastná
@@ -76,7 +76,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_dobesova.jpg" class="review__img"></img>
+                <img alt="Recenze - Barbora Dobešová" src="img/review_dobesova.jpg" class="review__img"></img>
             </div>
             <h5 class="heading-5">
                 Barbora Dobešová
@@ -97,7 +97,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_kaderkova.jpg" class="review__img"></img>
+                <img alt="Recenze - Petra Kaderková" src="img/review_kaderkova.jpg" class="review__img">
             </div>
             <h5 class="heading-5">
                 Petra Kaderková
@@ -118,7 +118,7 @@
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
                 </svg>
-                <img src="img/review_bajkaiova.jpg" class="review__img"></img>
+                <img alt="Recenze - Zuzana Bajkaiova" src="img/review_bajkaiova.jpg" class="review__img">
             </div>
             <h5 class="heading-5">
                 Zuzana Bajkaiova
