--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -3,7 +3,22 @@
         <use xlink:href="#bloom"></use> 
     </svg>
     <div class="topics__img__container toBeAnimated animation-rollInFromRight">
-        <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
+        <img
+            src="img/leafs_1200.jpg"
+            alt="Růže a listí"
+            class="topics__img__regular"
+            srcset="
+                img/leafs_400.jpg 400w,
+                img/leafs_600.jpg 600w,
+                img/leafs_1200.jpg 1200w,
+                img/leafs_big.jpg 1365w
+            "
+            sizes="
+                450px,
+                (max-width: 1100px) 298px, 
+                (max-width: 800px) 100vw
+            "
+        >
     </div>
     <div class="topics__text">
         <div class="topics__text__head">
@@ -12,16 +27,30 @@
             </svg>
             <h3 class="heading-3">Témata konzultací</h3>
         </div>
-        <div class="topics__text__consultation paragraph-1">Konzultace se nejčastěji týkají mezilidských vztahů, komunikace, osobnostního rozvoje, zvyšování kvality života, hledaní zdrojů při zvládání stresu, zlepšování zdravotní a psychické kondice, řešení konfliktních situací a zvladaní emocí. Dále se objevují témata, jak přistupovat k dětem a doprovázet je při emočních konfrontacích, partnerská problematika, posílení vlastních kompetencí při komunikaci v týmu, s nadřízeným, při prezentaci ve firmach.</div>
-        <div class="topics__text__reflect paragraph-1">- Osobní rozvoj</div>
+        <div class="topics__text__consultation paragraph-1">Konzultace se nejčastěji týkají mezilidských vztahů, komunikace, osobnostního rozvoje, zvyšování kvality života, hledaní zdrojů při zvládání stresu, zlepšování zdravotní a psychické kondice, řešení konfliktních situací a zvládání emocí. Dále se objevují témata, jak přistupovat k dětem a doprovázet je při emočních konfrontacích, partnerská problematika, posílení vlastních kompetencí při komunikaci v týmu, s nadřízeným, při prezentaci ve firmách.</div>
+        <div class="topics__text__reflect paragraph-1">- Osobní rozvoj - komunikace</div>
         <div class="topics__text__reflect paragraph-1">- Tělesné a duševní zdraví</div>
-        <div class="topics__text__reflect paragraph-1">- Komunikace</div>
         <div class="topics__text__reflect paragraph-1">- Mezilidské vztahy</div>        
     </div>
     <svg class="topics__svgBottom" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#bloom"></use> 
     </svg>
     <div class="topics__img__container toBeAnimated animation-rollInFromRight">
-        <img src="img/leafs.jpg" alt="rose" class="topics__img__mobile">
+        <img
+            src="img/leafs_600.jpg"
+            alt="Růže a listí"
+            class="topics__img__mobile"            
+            srcset="
+                img/leafs_400.jpg 400w,
+                img/leafs_600.jpg 600w,
+                img/leafs_1200.jpg 1200w,
+                img/leafs_big.jpg 1365w
+            "
+            sizes="
+                450px,
+                (max-width: 1100px) 298px, 
+                (max-width: 800px) 100vw
+            "
+        >
     </div>
 </section>
