--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/bloom.png">    
+    <link rel="canonical" href="https://www.tatjanahorka.cz" />
+    <meta property="og:description" content="Vzájemně v pohybu" />
+    <meta property="og:title" content="MUDr. Taťjana Horká" />
+    <meta property="og:url" content="https://www.tatjanahorka.cz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.tatjanahorka.cz/img/hero_1920.jpg" />
+    <meta property="og:image:secure_url" content="https://www.tatjanahorka.cz/img/hero_1920.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1920" />
+    <meta property="og:image:height" content="1280" />
+    <meta property="og:locale" content="cs_CZ" />
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="taťjana, horká">
+    <meta name="author" content="MUDr. Taťjana Horká">
+    <meta name="description" content="Vzájemně v pohybu">
     <title>Taťjana Horká | Vzájemně v pohybu</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
