--- a/App/Views/admin/includes/head.html
+++ b/App/Views/admin/includes/head.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="none">
     <title>Admin {{ title }} | Taťjana Horká</title>
     <link rel="stylesheet" href="/css/admin-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap" rel="stylesheet">
