--- a/App/Views/includes/events.html
+++ b/App/Views/includes/events.html
@@ -3,38 +3,16 @@
 
         {% for event in events %}
 
-            <!-- TAKE INDEX AND MULTIPLY DELAY -->
-
-            <div class="events__event delay toBeAnimated animation-bounceUp <!-- delay--05 -->">
+            <div class="events__event delay toBeAnimated animation-bounceUp {{ event.event_delay }}">
                 <h4 class="heading-4">{{ event.event_title }}</h4>
                 <p class="events__event__description">{{ event.event_content }}</p>
                 <p class="paragraph-small">{{ event.event_prettyDate }}</p>
                 {% if event.event_link %}
-                    <a href="{{ event.event_link }}" class="events__event__link">Více</a>
+                    <a href="{{ event.event_link }}" target="_blank" rel="noopener" class="events__event__link">Více</a>
                 {% endif %}
             </div>
     
         {% endfor %}
-
-        <!-- FOR TESTING PURPOSES -->
-        <div class="events__event delay toBeAnimated animation-bounceUp delay--05">
-            <h4 class="heading-4">Takže ahoj</h4>
-            <p class="events__event__description">Budliky čudlíky, na plotně smetana klohne, random báseň je toto africa, socha se málokdy pohne Budliky čudlíky, na plotně smetana klohne, random báseň je toto africa, socha se málokdy pohne </p>
-            <p class="paragraph-small">24.9.2020</p>
-            <a href="" class="events__event__link">Více</a>
-        </div>
-        <div class="events__event delay toBeAnimated animation-bounceUp delay--10">
-            <h4 class="heading-4">Takže ahoj</h4>
-            <p class="events__event__description">Budliky čudlíky, na plotně smetana klohne, random báseň je toto africa, socha se málokdy pohne </p>
-            <p class="paragraph-small">24.9.2020</p>
-            <a href="" class="events__event__link">Více</a> 
-        </div>
-        <div class="events__event delay toBeAnimated animation-bounceUp delay--15">
-            <h4 class="heading-4">Takže ahoj</h4>
-            <p class="events__event__description">Budliky čudlíky, na plotně smetana klohne, random báseň je toto africa, socha se málokdy pohne </p>
-            <p class="paragraph-small">24.9.2020</p>
-            <a href="" class="events__event__link">Více</a>
-        </div>
 
     </container>
 </section>
