--- a/src/client/scss/sections/_passedEvents.scss
+++ b/src/client/scss/sections/_passedEvents.scss
@@ -117,7 +117,7 @@
     
                     position: absolute;
                     right: 0;
-                    bottom: 0;
+                    bottom: -.5rem;
                 }
 
                 @media only screen and (max-width: 900px) {
