--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/img/bloom.png">    
     <link rel="canonical" href="https://www.tatjanahorka.cz" />
     <meta property="og:description" content="Vzájemně v pohybu" />
-    <meta property="og:title" content="MUDr. Taťjana Horká" />
+    <meta property="og:title" content="Taťjana Horká" />
     <meta property="og:url" content="https://www.tatjanahorka.cz" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.tatjanahorka.cz/img/hero_1920.jpg" />
@@ -17,7 +17,7 @@
     <meta property="og:locale" content="cs_CZ" />
     <meta name="robots" content="index, follow" />
     <meta name="keywords" content="taťjana, horká">
-    <meta name="author" content="MUDr. Taťjana Horká">
+    <meta name="author" content="Taťjana Horká">
     <meta name="description" content="Vzájemně v pohybu">
     <title>Taťjana Horká | Vzájemně v pohybu</title>
     <link rel="stylesheet" href="css/style.css">
